--- a/frontend/angular15_project/src/app/app.component.html
+++ b/frontend/angular15_project/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h2><img src="../kevision_project/static/images/KevisionLogo.jpg" alt="Company Logo"></h2>
+<!-- <h2><img [src]="site_logo" alt="Company Logo"></h2> -->
+<h2><img src="assets\image\KevisionLogo.jpg" alt=""></h2>
 <div class="container">
   <h3 class="d-flex justify-content-center">User Management Portal</h3>
   <nav class="navbar navbar-expand-sm bg-light navbar-dark">
